exports[`<Header /> renders correctly with collapsed option 1`] = `
<header
  className="sc-kpOJdX bMoDGb">
  <a
    className="sc-ifAKCX eUXMYF"
    href="/"
    name="navbar-logo">
    <span
      className="sc-EHOje cdEqWa"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-bZQynM jPpCfL"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with default options 1`] = `
<header
  className="sc-kpOJdX bMoDGb">
  <a
    className="sc-ifAKCX eUXMYF"
    href="/"
    name="navbar-logo">
    <span
      className="sc-EHOje cdEqWa"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-bZQynM jPpCfL"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with fixed and collapsed options 1`] = `
<header
  className="sc-kpOJdX fBGbcj">
  <a
    className="sc-ifAKCX eUXMYF"
    href="/"
    name="navbar-logo">
    <span
      className="sc-EHOje cdEqWa"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-bZQynM jPpCfL"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with fixed option 1`] = `
<header
  className="sc-kpOJdX fBGbcj">
  <a
    className="sc-ifAKCX eUXMYF"
    href="/"
    name="navbar-logo">
    <span
      className="sc-EHOje cdEqWa"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-bZQynM jPpCfL"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with given large logo 1`] = `
<header
  className="sc-kpOJdX bMoDGb">
  <a
    className="sc-ifAKCX eUXMYF"
    href="/"
    name="navbar-logo">
    <span
      className="sc-EHOje cdEqWa"
      name="navbar-logo-lg">
      <span>
        Large
      </span>
    </span>
    <span
      className="sc-bZQynM jPpCfL"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with given small logo 1`] = `
<header
  className="sc-kpOJdX bMoDGb">
  <a
    className="sc-ifAKCX eUXMYF"
    href="/"
    name="navbar-logo">
    <span
      className="sc-EHOje cdEqWa"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-bZQynM jPpCfL"
      name="navbar-logo-sm">
      <span>
        Small
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb fGPksR">
    <button
      className="fa fa-bars sc-bdVaJa frGQqo"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;

exports[`<Header /> renders correctly with theme 1`] = `
<header
  className="sc-kpOJdX bMoDGb">
  <a
    className="sc-ifAKCX kfhTjd"
    href="/"
    name="navbar-logo">
    <span
      className="sc-EHOje cdEqWa"
      name="navbar-logo-lg">
      <span>
        <b>
          Admin
        </b>
        LTE
      </span>
    </span>
    <span
      className="sc-bZQynM jPpCfL"
      name="navbar-logo-sm">
      <span>
        <b>
          A
        </b>
        LT
      </span>
    </span>
  </a>
  <nav
    className="sc-bxivhb kuJgEm">
    <button
      className="fa fa-bars sc-bdVaJa jxNjZi"
      name="sidebar-toggle"
      onClick={[Function]} />
    <div
      className="sc-htpNat ghgEpK">
      <ul
        className="sc-bwzfXH kmcEOQ"
        name="navbar-menu-wrapper" />
    </div>
  </nav>
</header>
`;
